--- a/b11-assignment-1/styles/style.css
+++ b/b11-assignment-1/styles/style.css
@@ -247,10 +247,14 @@ nav {
     border-radius: 16px;
     border: 1px solid rgba(14, 14, 14, 0.15);
     text-align: center;
-    padding-top: 50px;
+    padding-top: 20px;
     font-size: larger;
 }
 .done{
-    margin-top: 20px;
-    padding: 20px;
+    box-sizing: border-box;
+border: 1px solid rgba(14, 14, 14, 0.1);
+border-radius: 8px;
+
+background: rgb(0, 106, 80);
+margin-top: 20px;
 }
